# vscp-espnow

./: .gitmodules  README.md
.github/workflows/: build-alpha.yml  build-beta.yml
firmware/: security.patch
firmware/alpha/: .gitignore  CMakeLists.txt  README.md  TODO.md  partitions.csv  sdkconfig.defaults  sdkconfig.save
firmware/alpha/components/espressif__esp-now/: .component_hash  Kconfig
firmware/alpha/components/espressif__esp-now/src/control/src/: espnow_ctrl.c
firmware/alpha/components/espressif__esp-now/src/debug/include/: espnow_log.h
firmware/alpha/components/espressif__esp-now/src/debug/src/: espnow_log.c
firmware/alpha/components/espressif__esp-now/src/espnow/src/: espnow.c  espnow.c.orig
firmware/alpha/components/espressif__esp-now/src/ota/include/: espnow_ota.h
firmware/alpha/components/espressif__esp-now/src/security/src/: espnow_security_initiator.c  espnow_security_initiator.c.orig  espnow_security_responder.c
firmware/alpha/main/: CMakeLists.txt  Kconfig.projbuild  alpha.h  app_main.c  callbacks-link.c  callbacks-vscp-protocol.c  http_logging.c  idf_component.yml  mqtt.c  mqtt.h  mqtt_logging.c  net_logging.c  net_logging.h  tcp_logging.c  tcpsrv.c  tcpsrv.h  udp_logging.c  urldecode.c  urldecode.h  vscp-compiler.h  vscp-projdefs.h  websrv.c  websrv.h
firmware/alpha/mdf/: README.md  alpha0.json
firmware/beta/: .clang-format  CMakeLists.txt  partitions_4MB.csv  sdkconfig.defaults  sdkconfig.save
firmware/beta/components/espressif__esp-now/: CHANGELOG.md
firmware/beta/components/espressif__esp-now/src/debug/src/: espnow_log.c
firmware/beta/components/espressif__esp-now/src/espnow/src/: espnow.c  espnow.c.rej
firmware/beta/components/espressif__esp-now/src/ota/: espnow_ota_responder.c
firmware/beta/components/espressif__esp-now/src/provisioning/src/: espnow_prov.c
firmware/beta/components/espressif__esp-now/src/security/src/: espnow_security_initiator.c  espnow_security_responder.c
firmware/beta/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  beta.h  callbacks-vscp-protocol.c  idf_component.yml  vscp-compiler.h  vscp-projdefs.h
firmware/common/: registers_common.h  vscp-espnow.c  vscp-espnow.h  vscp_led_indicator_blink.c  vscp_led_indicator_blink.h
firmware/common/components/espressif__esp-now/: .component_hash  init.patch
firmware/common/components/espressif__esp-now/examples/ota/: sdkconfig
firmware/common/components/espressif__esp-now/examples/security/: sdkconfig  sdkconfig.old
firmware/common/components/espressif__esp-now/src/espnow/src/: espnow.c.orig
firmware/common/components/espressif__esp-now/src/security/src/: espnow_security_responder.c
firmware/patch/: clarify_security.patch  espnow_timesync.patch.txt  security_components.patch
firmware/provisioning/: sdkconfig
firmware/provisioning/main/: app_main.c  idf_component.yml
firmware/save/: led_indicator.c  led_indicator.h
firmware/security_initiator/: sdkconfig  sdkconfig.old
firmware/security_responder/: sdkconfig  sdkconfig.old
firmware/security_responder/main/: app_main.c
firmware/solution_initiator/: CMakeLists.txt  sdkconfig  sdkconfig.old
tools/: README.md
tools/common/: espnow_types.h  main.cpp
tools/vscp-espnow-echo/Includes/: ESPNOW_packet.h
tools/vscp-espnow-echo/src/: main.c
tools/vscp-espnow-receiver/: .clang-format  Makefile  README.md  main.c
