idf_component_register(SRCS "app_main.c" 
                            "$ENV{VSCP_FIRMWARE_COMMON}/vscp-firmware-helper.c"
                            "$ENV{VSCP_FIRMWARE_COMMON}/vscp-firmware-level2.c"
                            "$ENV{VSCP_FIRMWARE_COMMON}/vscp-link-protocol.c"
                            "$ENV{VSCP_FIRMWARE_COMMON}/vscp-aes.c"                           
                            "../../common/vscp-espnow.c"
                            "callbacks-vscp-protocol.c"
                            "urldecode.c"
                            "mqtt.c"
                            "websrv.c"
                            "callbacks-link.c"
                            "callbacks-vscp-protocol.c"
                            "tcpsrv.c"
                            "net_logging.c"
                            "udp_logging.c"
                            "tcp_logging.c"
                            "mqtt_logging.c"
                            "http_logging.c"
                       INCLUDE_DIRS "." 
                            "../../common"
                            "$ENV{VSCP_COMMON}" 
                            "$ENV{VSCP_ROOT}"
                            "$ENV{VSCP_FIRMWARE_COMMON}")
