idf_component_register(SRCS "app_main.c"
                            "../../../vscp-firmware/common/vscp-firmware-helper.c"
                            "../../../vscp-firmware/common/vscp-firmware-level2.c"
                            "../../../vscp-firmware/common/vscp-link-protocol.c"
                            "../../../vscp-firmware/common/vscp-aes.c"
                            "../../../vscp-firmware/common/vscp-fifo.c"
                            "../../common/dllist.c"
                            "../../common/vscp-espnow.c"
                            "callbacks-vscp-protocol.c"
                            "urldecode.c"
                            "mqtt.c"
                            "websrv.c"
                            "callbacks-link.c"
                            "callbacks-vscp-protocol.c"
                            "tcpsrv.c"
                            "net_logging.c"
                            "udp_logging.c"
                            "tcp_logging.c"
                            "mqtt_logging.c"
                            "http_logging.c"
                          INCLUDE_DIRS "."
                            "../../common"
                            "../../../vscp-firmware/common/"
                            "$ENV{VSCP_ROOT}"
                            "../../../")
