idf_component_register(SRCS "app_main.c"
                            "../../../third_party/vscp-firmware/common/vscp-firmware-helper.c"
                            "../../../third_party/vscp-firmware/common/vscp-link-protocol.c"
                            "../../../third_party/vscp-firmware/common/vscp-aes.c"
                            "../../../third_party/vscp-firmware/common/vscp-fifo.c"
                            "../../common/dllist.c"
                            "../../common/vscp-espnow.c"
                            "../../common/vscp_led_indicator_blink.c"
                            "callbacks-vscp-protocol.c"
                            "urldecode.c"
                            "mqtt.c"
                            "websrv.c"
                            "callbacks-link.c"
                            "callbacks-vscp-protocol.c"
                            "tcpsrv.c"
                            "net_logging.c"
                            "udp_logging.c"
                            "tcp_logging.c"
                            "mqtt_logging.c"
                            "http_logging.c"
                          INCLUDE_DIRS "."
                            "../../common"
                            "../../../third_party/vscp-firmware/common/"
                            "../../../third_party/vscp/src/vscp/common"
                            "../../../")
